force-app/main/default/objects/TVA_CFB__File_Request__c/TVA_CFB__File_Request__c.object-meta.xml
<CustomObject>
    <label>File Request</label>
    <nameField>
        <displayFormat>FR-{000000000}</displayFormat>
        <label>File Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>