force-app/main/default/objects/TVA_CFB__File_Request__c/fields/TVA_CFB__Contact__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>File Requests</relationshipLabel>
    <relationshipName>File_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>