force-app/main/default/objects/TVA_CFB__File_Request__c/fields/TVA_CFB__Email__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>