force-app/main/default/objects/TVA_CFB__File_Request__c/fields/TVA_CFB__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>