force-app/main/default/objects/TVA_CFB__File_Request__c/fields/TVA_CFB__File_Request_Short_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__File_Request_Short_URL__c</fullName>
    <label>File Request Short URL</label>
    <type>Url</type>
</CustomField>