force-app/main/default/objects/TVA_CFB__File_Request__c/fields/TVA_CFB__Folder__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Folder__c</fullName>
    <label>Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>