force-app/main/default/objects/TVA_CFB__File_Request__c/fields/TVA_CFB__Message__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>