force-app/main/default/objects/TVA_CFB__File_Request__c/fields/TVA_CFB__Upload_Count__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Upload_Count__c</fullName>
    <label>Upload Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>