force-app/main/default/objects/TVA_CFB__File_Request__c/listViews/TVA_CFB__All.listView-meta.xml
<ListView>
    <fullName>TVA_CFB__All</fullName>
    <columns>NAME</columns>
    <columns>TVA_CFB__Email__c</columns>
    <columns>TVA_CFB__Encoded_ID__c</columns>
    <columns>TVA_CFB__Expiration_Date__c</columns>
    <columns>TVA_CFB__Parent_ID__c</columns>
    <columns>TVA_CFB__Upload_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>